--- a/src/pages/Discussion/discussion.scss
+++ b/src/pages/Discussion/discussion.scss
@@ -163,7 +163,7 @@
 
     .messaging.str-chat .str-chat__list {
       padding: 0 10px 0 10px;
-      margin-bottom: 140px;
+      margin-bottom: 170px;
 
       &::-webkit-scrollbar {
         display: none;
